--- a/options.conf
+++ b/options.conf
@@ -1,3 +1,9 @@
+[package]
+name = R-stringi
+url = https://cran.r-project.org/src/contrib/stringi_1.1.6.tar.gz
+archives = 
+giturl = https://github.com/gagolews/stringi.git
+
 [autospec]
 # build 32 bit libraries
 32bit = false
