--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-stringi
-url = https://cran.r-project.org/src/contrib/stringi_1.1.6.tar.gz
+url = https://cran.r-project.org/src/contrib/stringi_1.1.7.tar.gz
 archives = 
 giturl = https://github.com/gagolews/stringi.git
 
@@ -11,10 +11,14 @@ giturl = https://github.com/gagolews/stringi.git
 allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
+# this package is trusted enough to automatically update (used by other tools)
+autoupdate = false
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# this package is a library compatability package and only ships versioned library files
+compat = false
 # set conservative build flags
 conservative_flags = false
 # pass -ffast-math to compiler
@@ -41,6 +45,8 @@ skip_tests = false
 so_to_lib = false
 # configure build for avx2
 use_avx2 = false
+# configure build for avx512
+use_avx512 = false
 # add clang flags
 use_clang = false
 # configure build for lto
