--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-stringi
-url = https://cran.r-project.org/src/contrib/stringi_1.2.2.tar.gz
+url = https://cran.r-project.org/src/contrib/stringi_1.2.3.tar.gz
 archives = 
 giturl = https://github.com/gagolews/stringi.git
 
@@ -12,7 +12,7 @@ allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = false
+autoupdate = true
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
