--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-stringi
-url = https://cran.r-project.org/src/contrib/stringi_1.2.4.tar.gz
+url = https://cran.r-project.org/src/contrib/stringi_1.3.1.tar.gz
 archives = 
 giturl = https://github.com/gagolews/stringi.git
 
@@ -21,6 +21,8 @@ broken_parallel_build = false
 compat = false
 # set conservative build flags
 conservative_flags = false
+# dev package requires the extras to be installed
+dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
 # optimize build for speed over size
