--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-stringi
-url = https://cran.r-project.org/src/contrib/stringi_1.7.8.tar.gz
+url = https://cran.r-project.org/src/contrib/stringi_1.7.12.tar.gz
 archives = 
 giturl = https://github.com/gagolews/stringi.git
 domain = 
@@ -27,6 +27,8 @@ conservative_flags = false
 dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
+# compile full (traditional) debug info
+full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
 # set flags to smallest -02 flags possible
@@ -35,6 +37,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
