--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-stringi
-url = https://cran.r-project.org/src/contrib/stringi_1.7.12.tar.gz
+url = https://cran.r-project.org/src/contrib/stringi_1.8.1.tar.gz
 archives = 
 giturl = https://github.com/gagolews/stringi.git
 domain = 
@@ -19,6 +19,8 @@ autoupdate = true
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# create vendor archive with cargo
+cargo_vendor = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
